--- a/src/App.css
+++ b/src/App.css
@@ -60,7 +60,7 @@ header{
     display: flex;
     justify-content: center;
     width: 100%;
-    left: -80px;
+
 
 }
 
@@ -294,7 +294,6 @@ section.skills{
 
 section.projects{
     & .title{
-        margin-top: 100px;
         text-align: center;
         font-size: 5vw;
         font-family: 'MuseoModerno', system-ui;
@@ -306,6 +305,7 @@ section.projects{
         text-align: center;
         max-width: 500px;
         margin: auto;
+
     }
     & .list{
         margin-top: 50px;
@@ -556,7 +556,7 @@ animation
     .icon-bar{
         position: absolute;
         margin-top: 10px;
-        left: 75px;
+        left: 80px;
     }
     
     .links{
@@ -580,7 +580,7 @@ animation
         }
     }
     
-    
+
     .links.active{
         width: 15%;
         margin-left:80px;
@@ -652,26 +652,23 @@ animation
         margin: 0;
         padding: 0;
     }
-    
     .projects .title{
         width: 10%;
         margin: 10%;
         display: flex;
         text-align: center;
         justify-content: center;
-    
     }
     
-    .projects .des.animation{
+    /* .projects .des.animation{
         width: 30%;
         display: inline;
         justify-content: center;
         text-align: center;
         font-size: 14px;
-        margin-right: 75%;
         margin-top: -120px;
         margin-bottom: -10px;
-    }
+    } */
     
         .projects .list:nth-child(1n){
             grid-template-columns: 1fr;
@@ -827,7 +824,10 @@ margin-left: -15px;
 
 
 
+#habilidades{
+    transition: opacity 0.5s ease-out;
 
+}
 
 
 
