--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,8 @@ body{
         background-image: linear-gradient(
             to right, #D02E23, #7A43B6
         );
-        top: -200px;
+        z-index: 1;
+        top: -300px;
         left: calc(50% - 200px);
         border-radius: 50% 50% 0% 0%;
         pointer-events: none;
@@ -53,7 +54,7 @@ header{
     top: 0;
     box-sizing: border-box;
     display: flex;
-    z-index: 100;
+    /* z-index: 100; */
 }
 
  header,nav{
@@ -552,8 +553,10 @@ animation
     
     
     /* NAVBAR */
-    
-    .icon-bar{
+    nav.links{
+        display: none;
+    }
+    /* .icon-bar{
         position: absolute;
         margin-top: 10px;
         left: 80px;
@@ -579,7 +582,7 @@ animation
             padding: 12px;
         }
     }
-    
+     */
 
     .links.active{
         width: 15%;
