--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,8 @@ html{
 }
 
 body{
+    display: flex;
+    justify-content: center;
     margin: 0;
     font-family: Poppins;
     background-color: #010824;
@@ -103,7 +105,7 @@ li a:hover{
 
 } */
 
-.front {
+/* .front {
     position: absolute;
     top: 76%;
     left: 160px;
@@ -118,7 +120,7 @@ li a:hover{
     font-weight: bold;
     cursor: default;
     animation: typing 6s steps(30) infinite;
-}
+} */
 
 @keyframes typing {
     from {
