--- a/src/App.css
+++ b/src/App.css
@@ -451,7 +451,7 @@ animation
 /* MEDIA QUERYS */
 
 
-@media screen and (max-width:480px){
+@media screen and (max-width:600px){
 
 
     html, body {
@@ -477,7 +477,7 @@ animation
 #inicio{
     width: 100%;
     height: 100%;
-    margin: -130px 0 0 0;
+    margin: 50px 0 0 0; 
     padding: 0;
     display: flex;
     justify-content: center;
@@ -528,10 +528,16 @@ animation
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 100px;
+}
+
+#inicio .avatar .data{
+    width: 100%;
+    margin: 0;
 }
 
 #inicio .avatar .data ul{
-    width: 400px   ;
+    width: 100%   ;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -546,7 +552,6 @@ animation
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 50px;
 }
 
 #habilidades .titulo-principal{
@@ -564,12 +569,37 @@ animation
     font-size: 30px;
     display: flex;
     flex-direction: row;
+    padding: 0 30px;
 }
 
 #habilidades .titulo-principal .des{
     margin-top: 10px;
     font-size: 16px;
     width: 100%;
+    height: 100%;
+    padding: 0 60px;
+    overflow-wrap: break-word;
+    word-break: break-word;
+    white-space: normal;
+    box-sizing: border-box;
+}
+
+section.skills {
+    & .list {
+        &::before {
+            position: absolute;
+            content: '';
+            width: 70%;
+            height: 100%;
+            background-image: linear-gradient(-45deg, red, blue);
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            pointer-events: none;
+            border-radius: 20px;
+            background-size: 200% auto;
+        }
+    }
 }
 
 /*PROYECTOS*/
@@ -588,18 +618,28 @@ animation
     font-size: 30px;
     display: flex;
     flex-direction: row;
+    justify-content: center;
 }
 
 #proyectos .titulo-principal .des {
     margin-top: 10px;
     font-size: 16px;
     width: 100%;
-    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding: 0 50px;
     overflow-wrap: break-word;
     word-break: break-word;
     white-space: normal;
     box-sizing: border-box;
+
+}
+
+
+#proyectos .list .item .content{
+    display: none;
 }
 
 #proyectos .list{
@@ -610,7 +650,7 @@ animation
     align-items: center;
     justify-content: center;
     margin: 0;
-    padding: 0;
+    padding: 0; 
 }
 
 #proyectos .list .item{
@@ -624,6 +664,18 @@ animation
 
 #proyectos .list .item .images{
     margin: 0;
+    width: 30%;
+    display: flex;
+    justify-items: center;
+    align-items: center;
+}
+
+#proyectos .list .item .images img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: auto;
 }
 
 /*CONTACTO*/
@@ -669,15 +721,37 @@ animation
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    
+}
+
+#contacto .list .item{
+    padding: 0 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    word-break: break-word;
+    white-space: normal;
+    box-sizing: border-box;
+}
+
+#contacto .icons{
+    font-size: 50px;
 }
 
 #contacto .list .item a{
     width: 100%;
+    height: 100%;
     word-break: break-word;
     white-space: normal;
     box-sizing: border-box;
-    padding: 0 50px;
+    font-size: 20px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 0;
+    padding: 0 0 10px 0;
 }
+
 }
 
 
