--- a/src/App.css
+++ b/src/App.css
@@ -105,7 +105,7 @@ li a:hover{
 
 } */
 
-/* .front {
+.front {
     position: absolute;
     top: 76%;
     left: 160px;
@@ -120,7 +120,7 @@ li a:hover{
     font-weight: bold;
     cursor: default;
     animation: typing 6s steps(30) infinite;
-} */
+}
 
 @keyframes typing {
     from {
@@ -473,6 +473,13 @@ animation
     }
 
 /*INICIO*/
+
+#inicio .front{
+position: relative;
+top: 30px;
+left: 100px;
+}
+
 
 #inicio{
     width: 100%;
